--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -30,20 +30,22 @@
 
             </ul>
 
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="/user/login" th:href="@{/user/login}"class="nav-link">로그인</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/user/join" th:href="@{/user/join}"class="nav-link">회원가입</a>
-                </li>
-                <li class="nav-item">
+            <ul class="navbar-nav ml-auto" >
+                <li class="nav-item" th:if="${loginUserBean.userLogin}">
                     <a href="/user/modify" th:href="@{/user/modify}" class="nav-link">정보수정</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${loginUserBean.userLogin}">
                     <a href="/user/logout" th:href="@{/user/logout}" class="nav-link">로그아웃</a>
                 </li>
+
+                <li class="nav-item" th:unless="${loginUserBean.userLogin}">
+                    <a href="/user/login"  th:href="@{/user/login}" class="nav-link">로그인</a>
+                </li>
+                <li class="nav-item" th:unless="${loginUserBean.userLogin}">
+                    <a href="/user/join" th:href="@{/user/join}" class="nav-link">회원가입</a>
+                </li>
             </ul>
+
         </div>
     </nav>
 </header>
