--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -43,11 +43,17 @@
                             <img id="board_file" th:src="@{'/upload/'+${readContentBean.content_file}}" width="100%"/>
                         </div>
                     </div>
+
                     <div class="form-group">
                         <div class="text-right">
                             <a href="${root }board/main" th:href="@{/board/main(board_info_idx=${board_info_idx})}" class="btn btn-primary">목록보기</a>
-                            <a href="${root }board/modify" th:href="@{/board/modify}"class="btn btn-info">수정하기</a>
-                            <a href="${root }board/delete" th:href="@{/board/delete}"class="btn btn-danger">삭제하기</a>
+
+                            <!-- 작성자 인덱스 번호랑 로그인한 사람의 인덱스 번호가 같아야한다.-->
+                            <span th:if="${loginUserBean.user_idx} == ${readContentBean.content_writer_idx}">
+                                <a href="${root }board/modify" th:href="@{/board/modify(board_info_idx=${board_info_idx}, content_idx=${content_idx})}"class="btn btn-info">수정하기</a>
+                                <a href="${root }board/delete" th:href="@{/board/delete(board_info_idx=${board_info_idx}, content_idx=${content_idx})}"class="btn btn-danger">삭제하기</a>
+                            </span>
+
                         </div>
                     </div>
                 </div>
