--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>미니 프로젝트</title>
+    <title>shoesUp</title>
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,32 +19,49 @@
         <div class="col-sm-6">
             <div class="card shadow">
                 <div class="card-body">
-                    <form action="${root }board/read" th:action="@{/board/read}" method="get">
+                    <form action="${root }board/read" th:action th:object="${modifyContentBean}" method="post" enctype="multipart/form-data">
+
+                        <!--                        어떤 글을 수정할지 알아야 하기 때문에 -->
+                        <input type="hidden" th:field="*{content_idx}">
+                        <!--                        수정하고 돌아올때 게시판 인덱스 번호도 알아야 하기 때문에-->
+                        <input type="hidden" th:field="*{content_board_idx}">
+
+
                         <div class="form-group">
-                            <label for="board_writer_name">작성자</label>
-                            <input type="text" id="board_writer_name" name="board_writer_name" class="form-control" value="홍길동" disabled="disabled"/>
+                            <label for="content_writer_name">작성자</label>
+                            <input type="text" id="content_writer_name" th:field="*{content_writer_name}" class="form-control" value="홍길동" readonly="true"/>
                         </div>
                         <div class="form-group">
-                            <label for="board_date">작성날짜</label>
-                            <input type="text" id="board_date" name="board_date" class="form-control" value="2018-7-20" disabled="disabled"/>
+                            <label for="content_date">작성날짜</label>
+                            <input type="text" id="content_date" th:field="*{content_date}" class="form-control" value="2018-7-20" readonly="true"/>
                         </div>
                         <div class="form-group">
-                            <label for="board_subject">제목</label>
-                            <input type="text" id="board_subject" name="board_subject" class="form-control" value="제목입니다"/>
+                            <label for="content_subject">제목</label>
+                            <input type="text" id="content_subject" th:field="*{content_subject}" class="form-control" value="제목입니다"/>
+                            <div class="field-error" th:errors="*{content_subject}"></div>
+
                         </div>
                         <div class="form-group">
-                            <label for="board_content">내용</label>
-                            <textarea id="board_content" name="board_content" class="form-control" rows="10" style="resize:none">본문입니다</textarea>
+                            <label for="content_text">내용</label>
+                            <textarea id="content_text" th:field="*{content_text}" class="form-control" rows="10" style="resize:none">본문입니다</textarea>
+                            <div class="field-error" th:errors="*{content_text}"></div>
+
                         </div>
+
                         <div class="form-group">
-                            <label for="board_file">첨부 이미지</label>
-                            <img src="${root }image/logo.png" width="100%"/>
-                            <input type="file" name="board_file" id="board_file" class="form-control" accept="image/*"/>
+                            <label for="upload_file">첨부 이미지</label>
+                            <div class="form-group" th:if="${modifyContentBean.content_file != null}">
+                                <img src="${root }image/logo.png"  th:src="@{'/upload/'+${modifyContentBean.content_file} }" width="100%"/>
+                                <input type="hidden" th:field="*{content_file}">
+                            </div>
+                            <input type="file" id="upload_file" th:field="*{upload_file}" class="form-control" accept="image/*"/>
                         </div>
+
+
                         <div class="form-group">
                             <div class="text-right">
                                 <button type="submit" class="btn btn-primary">수정완료</button>
-                                <a href="${root }board/read" th:href="@{/board/read}" class="btn btn-info">취소</a>
+                                <a href="${root }board/read" th:href="@{/board/read(board_info_idx=${board_info_idx}, content_idx=${content_idx})}" class="btn btn-info">취소</a>
                             </div>
                         </div>
                     </form>
