1004 글삭제 처리

--- a/src/main/resources/templates/board/delete.html
+++ b/src/main/resources/templates/board/delete.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script >
 
-<script>
-    alert('삭제되었습니다')
-    location.href='/board/main'
-</script>
+        var board_info_idx = "[[${board_info_idx}]]";
+        alert('삭제됐습니다.');
+        location.href = '/board/main?board_info_idx='+board_info_idx
+
+
+    </script>
+</head>
+
+</html>
