--- a/src/main/resources/templates/board/main.html
+++ b/src/main/resources/templates/board/main.html
@@ -34,7 +34,7 @@
 
                     <tr th:each="obj : ${contentList} ">
                         <td class="text-center d-none d-md-table-cell" th:text="${obj.content_idx}">10</td>
-                        <td><a href='board_read.html' th:href="@{/board/read(board_info_idx=${board_info_idx}, content_idx=${obj.content_idx})}" th:text="${obj.content_subject}">글 제목 입니다</a></td>
+                        <td><a href='board_read.html' th:href="@{/board/read(board_info_idx=${board_info_idx}, content_idx=${obj.content_idx}, page=${page})}" th:text="${obj.content_subject}">글 제목 입니다</a></td>
                         <td class="text-center d-none d-md-table-cell" th:text="${obj.content_writer_name}">홍길동</td>
                         <td class="text-center d-none d-md-table-cell" th:text="${obj.content_date}" >2018-12-12</td>
                     </tr>
@@ -45,53 +45,35 @@
 
             <div class="d-none d-md-block">
                 <ul class="pagination justify-content-center">
-                    <li class="page-item">
-                        <a href="#" class="page-link">이전</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">1</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">2</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">3</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">4</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">5</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">6</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">7</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">8</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">9</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">10</a>
-                    </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">다음</a>
-                    </li>
-                </ul>
-            </div>
 
-            <div class="d-block d-md-none">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item">
-                        <a href="#" class="page-link">이전</a>
+
+                    <li th:if="${pageBean.prevPage} le 0" class="page-item disabled">
+                        <a  href="#" th:href="@{/board/main(board_info_idx=${board_info_idx},page=${pageBean.prevPage})}" class="page-link ">이전</a>
                     </li>
-                    <li class="page-item">
-                        <a href="#" class="page-link">다음</a>
+                    <li th:unless="${pageBean.prevPage} le 0" class="page-item ">
+                        <a  href="#" th:href="@{/board/main(board_info_idx=${board_info_idx},page=${pageBean.prevPage})}" class="page-link ">이전</a>
                     </li>
+
+
+
+                    <li  class="page-item "th:each="idx : ${#numbers.sequence(pageBean.min, pageBean.max)}" th:classappend="${idx} == ${pageBean.currentPage} ? 'active'" >
+                        <a th:href="@{/board/main(board_info_idx=${board_info_idx},page=${idx})}" class="page-link active " th:text="${idx}" >page</a>
+
+                    </li>
+
+
+                    <!--다음버튼 비활성화 작업-->
+                    <!--                    <li th:if="${pageBean.max} ge ${pageBean.pageCnt}" class="page-item disabled">-->
+                    <!--                        <a  href="#" th:href="@{/board/main(board_info_idx=${board_info_idx},page=${pageBean.prevPage})}" class="page-link ">다음</a>-->
+                    <!--                    </li>-->
+                    <!--                    <li th:unless="${pageBean.max} ge ${pageBean.pageCnt}" class="page-item ">-->
+                    <!--                        <a  href="#" th:href="@{/board/main(board_info_idx=${board_info_idx},page=${pageBean.prevPage})}" class="page-link ">다음</a>-->
+                    <!--                    </li>-->
+
+                    <li class="page-item">
+                        <a href="#" th:href="@{/board/main(board_info_idx=${board_info_idx},page=${pageBean.nextPage})}"class="page-link">다음</a>
+                    </li>
+
                 </ul>
             </div>
 
