--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -25,6 +25,7 @@
                         <input type="hidden" th:field="*{content_idx}">
                         <!--                        수정하고 돌아올때 게시판 인덱스 번호도 알아야 하기 때문에-->
                         <input type="hidden" th:field="*{content_board_idx}">
+                        <input type="hidden" th:value="${page}">
 
 
                         <div class="form-group">
@@ -61,7 +62,7 @@
                         <div class="form-group">
                             <div class="text-right">
                                 <button type="submit" class="btn btn-primary">수정완료</button>
-                                <a href="${root }board/read" th:href="@{/board/read(board_info_idx=${board_info_idx}, content_idx=${content_idx})}" class="btn btn-info">취소</a>
+                                <a href="${root }board/read" th:href="@{/board/read(board_info_idx=${board_info_idx}, content_idx=${content_idx}, page=${page})}" class="btn btn-info">취소</a>
                             </div>
                         </div>
                     </form>
