--- a/src/main/resources/templates/user/login_success.html
+++ b/src/main/resources/templates/user/login_success.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script>
         alert('로그인 되었습니다.')
-        location.href='/items/items'
+        location.href='/items/items_nike'
     </script>
 </head>
 <body>
