--- a/src/main/resources/templates/board/not_writer.html
+++ b/src/main/resources/templates/board/not_writer.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script>
         alert('잘못된 접근입니다.')
-        location.href='/items/items'
+        location.href='/items/items_nike'
     </script>
 </head>
 <body>
