--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -3,7 +3,7 @@
 <header>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top shadow-lg">
 <!--        <a class="navbar-brand" href="${root }main">SoftCampus</a>-->
-        <a href="main" th:href="@{/items/items}" class="navbar-brand d-flex align-items-center">
+        <a href="main" th:href="@{/items/items_nike}" class="navbar-brand d-flex align-items-center">
             <strong>shoesUp</strong>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="/main" th:href="@{/items/items}" class="nav-link">upcoming-Nike</a>
+                    <a href="/main" th:href="@{/items/items_nike}" class="nav-link">upcoming-Nike</a>
                 </li>
                 <li class="nav-item">
                     <a href="/main" th:href="@{/items/items_newbalance}" class="nav-link">upcoming-Newbalance</a>
