--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -14,10 +14,10 @@
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="/main" th:href="@{/items/items_nike}" class="nav-link">upcoming-Nike</a>
+                    <a href="/main" th:href="@{/items/items_nike}" class="nav-link">Nike 런칭캘린더</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/main" th:href="@{/items/items_newbalance}" class="nav-link">upcoming-Newbalance</a>
+                    <a href="/main" th:href="@{/items/items_newbalance}" class="nav-link">Newbalance 런칭캘린더</a>
                 </li>
             </ul>
 
