--- a/src/main/resources/templates/items/item.html
+++ b/src/main/resources/templates/items/item.html
@@ -14,26 +14,26 @@
     <div class="container">
 
         <div class="py-5 text-center">
-            <h2 th:text="#{page.item}">상품상세</h2>
+            <h2 >상품상세</h2>
         </div>
 
         <!--추가-->
         <h2 th:if="${param.status}" th:text="'저장 완료'"></h2>
 
         <div>
-            <label for="itemImg" th:text="#{label.item.image}">상품 이미지</label>
+            <label for="itemImg">상품 이미지</label>
             <input type="image" id="itemImg" name="itemImg" class="form-control" th:src="${item.imgUrl}" readonly>
         </div>
         <div>
-            <label for="itemId" th:text="#{label.item.id}">상품 ID</label>
+            <label for="itemId" >상품 ID</label>
             <input type="text" id="itemId" name="itemId" class="form-control" value="1" th:value="${item.id}" readonly>
         </div>
         <div>
-            <label th:text="#{label.item.itemName}">상품명</label>
+            <label >상품명</label>
             <input type="text" id="itemName"  class="form-control" value="에어포스" th:value="${item.itemName}" readonly>
         </div>
         <div>
-            <label th:text="#{label.item.releaseDateTime}">출시일 및 시간</label>
+            <label >출시일 및 시간</label>
             <input type="text" id="itemDate"  class="form-control" value="에어포스" th:value="${item.date}+일+' '+${item.releaseTime}" readonly>
         </div>
 
@@ -49,8 +49,8 @@
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/form/items}'|"
-                        type="button" th:text="#{button.list}">목록으로</button>
+                        th:onclick="|location.href='@{/items/items_nike}'|"
+                        type="button" >목록으로</button>
             </div>
         </div>
 
